--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Your Figma Plugin",
   "main": "code.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "webpack",
     "watch": "webpack --watch"
   },
   "author": "",
   "license": "",
   "devDependencies": {
-    "@figma/plugin-typings": "^1.44.0",
+    "@figma/plugin-typings": "^1.49.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
